Fixed selection bug overwriting settings when selecting in the entities tree. Also made the designer settings central and not a part of the design file.